crates/oxc_css/tests/error/scss/at-rule/debug/no-argument.snap
---
source: crates/oxc_css/tests/error.rs
---
error: component value is expected
  ┌─ no-argument.scss:1:7
  │
1 │ @debug;
  │       ^


